--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Content Manager</title>
-    <script src="https://unpkg.com/decap-cms-app/dist/decap-cms-app.js"></script>
   </head>
   <body>
-    <script>
-      window.CMS.init();
-    </script>
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </body>
 </html>
