--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -6,6 +6,6 @@
     <title>Content Manager</title>
   </head>
   <body>
-    <script src="https://unpkg.com/decap-cms@3.3.2/dist/decap-cms.js"></script>
+    <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
   </body>
 </html>
